feat: Añadir componente GrowthChart y GrowthChartOverview con sus respectivas pruebas y traducciones

--- a/translations/en.json
+++ b/translations/en.json
@@ -2,6 +2,7 @@
   "Abdomen": "Abdomen",
   "abdomenCharacteristics": "Abdomen Characteristics",
   "abnormalValue": "Abnormal value",
+  "abortions": "Abortos",
   "accidentOrTrauma": "Accident or Trauma",
   "action": "Action",
   "actions": "Actions",
@@ -45,9 +46,12 @@
   "babyGivenVitaminD": "Baby Given Vitamin K",
   "balanceOverview": "Fluid Balance",
   "baselineHivStatus": "Baseline HIV Status",
+  "bilingual": "Bilingüe (Español/Quechua)",
   "biometrics_lower": "biometrics",
   "birthInjuriesTrauma": "Birth Injuries/Trauma",
   "birthQuestionnaire": "Cuestionario Inmediato para Nacimiento",
+  "births": "Partos",
+  "birthTypes": "Tipos de Parto",
   "bloodGroup": "Blood Group",
   "bloodLoss": "Blood Transfusion Done",
   "bloodTransfusion": "Blood Transfusion",
@@ -67,6 +71,7 @@
   "cervicalDilation": "Cervical Dilation cm",
   "chartView": "Chart View",
   "checkFilters": "Check the filters above",
+  "checkForErrors": "Por favor revise el formulario e intente nuevamente",
   "chestCircumference": "Chest Circumference",
   "childImmunizationSchedule": "Esquema de Vacunación Infantil",
   "chronicDisease": "Chronic Disease",
@@ -86,12 +91,16 @@
   "contacted": "Contacted",
   "contactList": "Contact list",
   "controlPuerperio": "Postpartum Checkups",
+  "coordinacion": "Coordinación",
   "cordClamping": "Cord Clamping",
   "createPatient": "Create patient",
   "credAgeGroups": "Control Según Edad",
   "credCheckups": "Controles CRED",
   "credControls": "Controles CRED",
   "CuidadoPrenatal": "Cuidado Prenatal",
+  "culturalContext": "Contexto Cultural",
+  "culturalNotes": "Notas Culturales y Contextuales",
+  "culturalNotesPlaceholder": "Observaciones sobre factores culturales, familiares o del entorno que puedan influir en el desarrollo...",
   "currentPregnancy": "Embarazo Actual",
   "customViews": "In this section, you'll find custom clinical views tailored to patients' conditions and enrolled care programs.",
   "dataDisplayed": "Data displayed",
@@ -109,8 +118,13 @@
   "deliveryOrAbortion": "Delivery or Abortion",
   "deliveryType": "Delivery Type",
   "department": "Department",
+  "desarrolloCognitivo": "Desarrollo Cognitivo",
+  "desarrolloLenguaje": "Desarrollo del Lenguaje",
+  "desarrolloMotor": "Desarrollo Motor",
+  "desarrolloSocialEmocional": "Desarrollo Social-Emocional",
   "descentOfHead": "Descent of Head",
   "descriptionRequired": "Debe ingresar una descripción de la reacción",
+  "detailedBreakdown": "Desglose Detallado",
   "Diagnóstico": "Diagnosis",
   "diastolic": "Diastolic",
   "diastolicBP": "Diastolic BP (mmHg)",
@@ -144,6 +158,9 @@
   "esophagus": "Esophageal Patency",
   "EstadoAdministraciónVitaminaA": "Vitamin A Administration Status",
   "EstadoGeneral": "General Condition",
+  "evaluationDate": "Fecha de evaluación",
+  "evaluationItems": "Items de Evaluación",
+  "evolutionOf": "Evolución de",
   "examDate": "Fecha de Examen",
   "examenFísicoTórax": "Chest Physical Examination",
   "ExamenGenitalesExternos": "External Genital Examination",
@@ -153,6 +170,7 @@
   "fechaYHoraAtencion": "Date and Time of the Appointment",
   "feedingOrders": "Feeding Orders",
   "feedingTime": "Tiempo que el Bebé Mamó (min)",
+  "female": "Femenino",
   "fetalHeartRate": "Fetal Heart Rate",
   "field": "Field",
   "filterByForm": "Filter by form",
@@ -169,12 +187,14 @@
   "frecuenciaCardiacaFetal": "Fetal Heart Rate (per min.)",
   "gastricLavage": "Lavado Gástrico",
   "gastricLavageCount": "Cantidad de Lavados Gástricos",
+  "generalObservations": "Observaciones Generales",
   "genitourinary": "Genitourinary",
   "genitourinaryElimination": "Genitourinary",
   "genitourinaryEliminationOther": "Other (Elimination)",
   "gestationalAge": "Gestational Age (weeks)",
   "gestationalSize": "Gestational Size",
   "gravidez": "Pregnancy",
+  "growthChart": "Growth Chart",
   "headCircumference": "Head Circumference (cm)",
   "heartRate": "Heart Rate (bpm)",
   "height": "Height (cm)",
@@ -208,15 +228,20 @@
   "labourMetricDisplayed": "Labour History Metric",
   "legend": "Leyenda",
   "legendItems": "Elementos de la leyenda",
+  "lenguaje": "Lenguaje",
   "limbs": "Limbs",
   "limbsOther": "Other fro limbs",
+  "limite": "Límite",
   "listingDate": "Listing date",
+  "liveBirths": "Nacidos vivos",
   "livingWithClient": "Living with client",
   "loading": "Loading...",
+  "loadingAppointments": "Cargando citas...",
   "loadingData": "Loading data",
   "loadingEncounters": "Loading encounters...",
   "loadingPatient": "Loding Patient...",
   "location": "Location",
+  "male": "Masculino",
   "manageVaccinationSchedule": "Manage Schedule",
   "maternaHistory": "Antecedente de Historia Materna",
   "maternalCondition": "Maternal Condition",
@@ -225,11 +250,12 @@
   "maternalSummary": "Maternal Summary",
   "maternalWeight": "Maternal Weight (Kg)",
   "medicalHistory": "Medical History",
+  "metricDisplayed": "Métrica mostrada",
   "mild": "Leve",
   "missedAppointmentDate": "Date Missed Appointment",
   "modeOfDelivery": "Mode of Delivery",
   "moderate": "Moderada",
-  "months": "months",
+  "motricidad": "Motricidad",
   "mouth": "Mouth",
   "mouthOther": "Other for mouth",
   "movimientoFetal": "Fetal movement",
@@ -253,17 +279,22 @@
   "next": "Next",
   "nextMonth": "Next month",
   "nipples": "nipples",
+  "noChartDataAvailable": "No chart data available",
   "noConditionsToDisplay": "No conditions to display",
   "noContactToDisplay": "There is no contact data to display for this patient.",
   "noCurrentAppointments": "There are no appointments scheduled for today to display for this patient",
   "noDataAvailableDescription": "No data available",
   "noEncounterToDisplay": "There are no encounters to display for this patient.",
   "noFamilyHistoryData": "There is no family history data to display for this patient.",
+  "noHistoricalData": "No hay datos históricos disponibles para esta métrica",
   "noLegendItems": "No hay elementos de leyenda disponibles",
   "nonCredControls": "Controles NO CRED",
   "noObservationsFound": "No observations found",
   "noPastAppointments": "There are no past appointments to display for this patient",
   "noResultsFor": "No results for",
+  "normal": "Normal",
+  "normalAlto": "Normal Alto",
+  "normalBajo": "Normal Bajo",
   "nose": "nose",
   "noseOther": "Other for nose",
   "notApplicable": "No aplica",
@@ -274,11 +305,15 @@
   "nursingDiagnosis": "Diagnóstico de Enfermería",
   "observacion": "Observación",
   "observation": "Observation",
+  "observationGroup": "Grupo de Observación",
+  "observationsPlaceholder": "Observaciones adicionales sobre la evaluación...",
+  "obstetricFormula": "Fórmula Obstétrica",
   "occurrenceDate": "Fecha de ocurrencia",
   "onsetDate": "Onset date",
   "operatingDoctor": "Operating Doctor",
   "otherRelationships": "Other Relationships",
   "otherSubstanceAbuse": "Other Substance Abuse",
+  "outcomes": "Resultados",
   "overdue": "Atrasada",
   "oxygenSaturation": "Saturación de Oxígeno",
   "oxygenSupport": "Soporte de Oxígeno",
@@ -293,7 +328,9 @@
   "partoPrematuro": "Preterm deliveries",
   "past": "Past",
   "patient": "Patient",
+  "patientAndCulturalInfo": "Información del Paciente y Contexto Cultural",
   "patientFamilyTable": "Patient family table",
+  "patientInfo": "Información del Paciente",
   "pending": "Pending",
   "perinatalRecord": "Registro Perinatal",
   "pesoCorporal": "Body Weight (kg)",
@@ -308,6 +345,8 @@
   "postnatalControls": "Control del Puerperio",
   "postOperativeComplications": "Post Operative Complications",
   "postOperativeDiagnosis": "Post Operative Diagnosis",
+  "pregnancies": "Embarazos",
+  "prematureBirths": "Prematuros",
   "prenatalAntecedents": " Prenatal History",
   "prenatalCare": "Control Prenatal",
   "prenatalCareChart": "Control Prenatal",
@@ -318,11 +357,14 @@
   "prev": "Prev",
   "previousMonth": "Previous month",
   "primaryDiagnosis": "Primary Diagnosis",
+  "primaryLanguage": "Idioma Primario",
   "priorityOfAdmission": "Priority Of Admission",
   "proximaCita": "Next Appointment",
   "puerperioInmediato": "Puerperio Inmediato",
+  "quechua": "Quechua",
   "reactionDescription": "Descripción de la reacción",
   "reactionPlaceholder": "Describa los síntomas observados...",
+  "recommendation": "Recomendación",
   "recommendedProcedure": "Recommended Procedure",
   "recordLabourDetails": "Record labour details",
   "referrals": "Referrals",
@@ -335,9 +377,15 @@
   "required": "Required",
   "respiratoryRate": "Respiratory Rate (rpm)",
   "responses": "Respuestas",
+  "resultsPreview": "Vista previa de resultados (Ajustados culturalmente)",
   "resumenPartoPuerperio": "Resumen de Parto y Puerperio",
+  "retraso": "Retraso",
+  "riesgo": "En riesgo",
+  "rural": "Rural/Andino",
   "save": "Save",
+  "saveAndClose": "Guardar y Cerrar",
   "savedRelationship": "Relationship ended successfully",
+  "saving": "Guardando...",
   "scheduled": "Próxima dosis",
   "searchConditions": "Search conditions",
   "searching": "Searching",
@@ -357,13 +405,16 @@
   "smoking": "Smoking",
   "smokingDuration": "Smoking Duration",
   "socialHistory": "Social History",
+  "spanish": "Español",
   "spinalColumn": "spinal column",
   "spinalColumnOther": "Other for spinal column",
   "status": "Status",
   "statusAtDischarge": "Status at Discharge",
+  "stillBirths": "Nacidos muertos",
   "successfullyDeleted": "successfully deleted",
   "suction": "Succión",
   "summaryOfLaborAndPostpartum": "Resumen del Parto y Puerperio",
+  "superior": "Superior",
   "surgicalHistory": "Surgical History",
   "surgicalSummary": "Surgical Summary",
   "sutures": "Sutures",
@@ -373,17 +424,29 @@
   "Talla": "Talla (cm)",
   "tbScreening": "TB screening outcome",
   "temperature": "Temperature °C",
+  "tepsiDataAvailable": "The evaluation is now available in the patient record",
+  "tepsiSaved": "TEPSI Evaluation Saved",
+  "tepsiSaveError": "There was an error saving the TEPSI evaluation",
+  "tepsiSubtitle": "Evaluación del desarrollo psicomotor en niños de 2 a 5 años",
+  "tepsiTitle": "Test de Desarrollo Psicomotor (TEPSI)",
+  "termBirths": "A término",
   "terminationDate": "Termination Date",
   "testApproach": "Approach",
   "testDate": "Test Date",
   "testEntryPoint": "Entry point",
   "testingRecommended": "Testing recommended",
+  "testPeruanoDataAvailable": "La evaluación está disponible en el registro del paciente",
+  "testPeruanoSaved": "Test Peruano de Desarrollo Guardado",
+  "testPeruanoSaveError": "Hubo un error al guardar el Test Peruano",
+  "testPeruanoSubtitle": "Evaluación del desarrollo infantil adaptada al contexto cultural peruano",
+  "testPeruanoTitle": "Test Peruano de Desarrollo Infantil",
   "testStrategy": "Strategy",
   "therapiesPrescribed": "Therapies Prescribed",
   "thorax": "thorax",
   "time": "Tiempo",
   "timeRecorded": "Time Recorded",
   "today": "Today",
+  "total": "Resultado General",
   "tracingNumber": "Tracing No.",
   "tracingType": "Tracing Type",
   "type": "Type",
@@ -395,6 +458,8 @@
   "update": "update",
   "updateError": "Error updating upcoming appointment",
   "updateVaccinations": "Actualizar vacunas",
+  "urban": "Urbano",
+  "urbanMarginal": "Urbano Marginal",
   "uterineHeight": "Uterine Height (cm)",
   "vaccinationSchedule": "Vaccination Schedule",
   "vaccinationScheduleBuilder": "Vaccination Schedule Builder",
