--- a/translations/es.json
+++ b/translations/es.json
@@ -2,6 +2,7 @@
   "Abdomen": "Abdomen",
   "abdomenCharacteristics": "Características del abdomen",
   "abnormalValue": "Valor anormal",
+  "abortions": "Abortos",
   "accidentOrTrauma": "Accidente o trauma",
   "action": "Acción",
   "actions": "Acciones",
@@ -45,9 +46,12 @@
   "babyGivenVitaminD": "Vitamina D administrada al bebé",
   "balanceOverview": "Balance de líquidos",
   "baselineHivStatus": "Estado basal del VIH",
+  "bilingual": "Bilingüe (Español/Quechua)",
   "biometrics_lower": "Biometría",
   "birthInjuriesTrauma": "Lesiones o traumas al nacer",
   "birthQuestionnaire": "Cuestionario Inmediato para Nacimiento",
+  "births": "Partos",
+  "birthTypes": "Tipos de Parto",
   "bloodGroup": "Grupo sanguíneo",
   "bloodLoss": "Pérdida de sangre",
   "bloodTransfusion": "Transfusión de sangre",
@@ -67,6 +71,7 @@
   "cervicalDilation": "Dilación cervical (cm)",
   "chartView": "Vista de la tabla",
   "checkFilters": "Verifique los filtros seleccionados",
+  "checkForErrors": "Por favor revise el formulario e intente nuevamente",
   "chestCircumference": "Perímetro torácico",
   "childImmunizationSchedule": "Esquema de Vacunación Infantil",
   "chronicDisease": "Enfermedad crónica",
@@ -86,12 +91,16 @@
   "contacted": "Contactado",
   "contactList": "Lista de contactos",
   "controlPuerperio": "Control de puerperio",
+  "coordinacion": "Coordinación",
   "cordClamping": "Clampeo del cordón",
   "createPatient": "Crear paciente",
   "credAgeGroups": "Control CRED según edad",
   "credCheckups": "Controles CRED",
   "credControls": "Controles CRED",
   "CuidadoPrenatal": "Cuidado Prenatal",
+  "culturalContext": "Contexto Cultural",
+  "culturalNotes": "Notas Culturales y Contextuales",
+  "culturalNotesPlaceholder": "Observaciones sobre factores culturales, familiares o del entorno que puedan influir en el desarrollo...",
   "currentPregnancy": "Embarazo Actual",
   "customViews": "En esta sección, encontrará vistas clínicas personalizadas adaptadas a las condiciones de los pacientes y los programas de atención inscrita.",
   "dataDisplayed": "Datos mostrados",
@@ -109,8 +118,13 @@
   "deliveryOrAbortion": "Partos y Abortos",
   "deliveryType": "Tipo de parto",
   "department": "Departamento",
+  "desarrolloCognitivo": "Desarrollo Cognitivo",
+  "desarrolloLenguaje": "Desarrollo del Lenguaje",
+  "desarrolloMotor": "Desarrollo Motor",
+  "desarrolloSocialEmocional": "Desarrollo Social-Emocional",
   "descentOfHead": "Descenso de la presentación",
   "descriptionRequired": "Se requiere una descripción",
+  "detailedBreakdown": "Desglose Detallado",
   "Diagnóstico": "Diagnóstico",
   "diastolic": "Diastólico",
   "diastolicBP": "Presión diastólica (mmHg)",
@@ -144,6 +158,9 @@
   "esophagus": "Esófago permeable",
   "EstadoAdministraciónVitaminaA": "Estado de administración de vitamina A",
   "EstadoGeneral": "Estado General",
+  "evaluationDate": "Fecha de evaluación",
+  "evaluationItems": "Items de Evaluación",
+  "evolutionOf": "Evolución de",
   "examDate": "Fecha del Examen",
   "examenFísicoTórax": "Examen físico de tórax",
   "ExamenGenitalesExternos": "Examen de genitales externos",
@@ -153,6 +170,7 @@
   "fechaYHoraAtencion": "Fecha y hora de atención",
   "feedingOrders": "Órdenes de alimentación",
   "feedingTime": "Tiempo que el Bebé Mamó (min)",
+  "female": "Femenino",
   "fetalHeartRate": "Frecuencia cardíaca fetal",
   "field": "Campo",
   "filterByForm": "Filtrar por formulario",
@@ -169,12 +187,14 @@
   "frecuenciaCardiacaFetal": "Frecuencia cardíaca fetal (por min.)",
   "gastricLavage": "Lavado gástrico",
   "gastricLavageCount": "Cantidad de lavados gástricos",
+  "generalObservations": "Observaciones Generales",
   "genitourinary": "Genitourinario",
   "genitourinaryElimination": "Eliminación genitourinaria",
   "genitourinaryEliminationOther": "Otras observaciones sobre la eliminación genitourinaria",
   "gestationalAge": "Edad gestacional (semanas)",
   "gestationalSize": "Tamaño gestacional",
   "gravidez": "Gravidez",
+  "growthChart": "Growth Chart",
   "headCircumference": "Perímetro cefálico",
   "heartRate": "Frecuencia cardíaca",
   "height": "Altura",
@@ -208,15 +228,20 @@
   "labourMetricDisplayed": "Métricas del trabajo de parto mostradas",
   "legend": "Leyenda",
   "legendItems": "Elementos de la leyenda",
+  "lenguaje": "Lenguaje",
   "limbs": "Extremidades",
   "limbsOther": "Otras observaciones sobre extremidades",
+  "limite": "Límite",
   "listingDate": "Fecha de listado",
+  "liveBirths": "Nacidos vivos",
   "livingWithClient": "Persona que convive con el paciente",
   "loading": "Cargando...",
+  "loadingAppointments": "Cargando citas...",
   "loadingData": "Cargando datos...",
   "loadingEncounters": "Cargando encuentros ...",
   "loadingPatient": "Cargando paciente ...",
   "location": "Ubicación",
+  "male": "Masculino",
   "manageVaccinationSchedule": "Administrar calendario de vacunación",
   "maternaHistory": "Antecedente de Historia Materna",
   "maternalCondition": "Condición materna",
@@ -225,11 +250,12 @@
   "maternalSummary": "Resumen materno",
   "maternalWeight": "Peso materno",
   "medicalHistory": "Antecedentes médicos",
+  "metricDisplayed": "Métrica mostrada",
   "mild": "Leve",
   "missedAppointmentDate": "Fecha de cita perdida",
   "modeOfDelivery": "Tipo de parto",
   "moderate": "Moderada",
-  "months": "Meses",
+  "motricidad": "Motricidad",
   "mouth": "Boca",
   "mouthOther": "Otras observaciones sobre la boca",
   "movimientoFetal": "Movimiento fetal",
@@ -253,17 +279,22 @@
   "next": "Siguiente",
   "nextMonth": "Siguiente mes",
   "nipples": "Pezones",
+  "noChartDataAvailable": "No chart data available",
   "noConditionsToDisplay": "No hay condiciones para mostrar.",
   "noContactToDisplay": "No hay datos de contacto disponibles para este paciente.",
   "noCurrentAppointments": "No hay citas programadas para hoy para este paciente.",
   "noDataAvailableDescription": "No hay datos disponibles.",
   "noEncounterToDisplay": "No hay encuentros que mostrar para este paciente.",
   "noFamilyHistoryData": "No hay antecedentes familiares registrados para este paciente.",
+  "noHistoricalData": "No hay datos históricos disponibles para esta métrica",
   "noLegendItems": "No hay elementos de leyenda disponibles",
   "nonCredControls": "Controles NO CRED",
   "noObservationsFound": "No se encontraron observaciones",
   "noPastAppointments": "No hay citas previas registradas para este paciente.",
   "noResultsFor": "No hay resultados para esta búsqueda",
+  "normal": "Normal",
+  "normalAlto": "Normal Alto",
+  "normalBajo": "Normal Bajo",
   "nose": "Nariz",
   "noseOther": "Otras observaciones sobre la nariz",
   "notApplicable": "No aplica",
@@ -274,11 +305,15 @@
   "nursingDiagnosis": "Diagnóstico de enfermería",
   "observacion": "Observación",
   "observation": "Observación",
+  "observationGroup": "Grupo de Observación",
+  "observationsPlaceholder": "Observaciones adicionales sobre la evaluación...",
+  "obstetricFormula": "Fórmula Obstétrica",
   "occurrenceDate": "Fecha de ocurrencia del evento",
   "onsetDate": "Fecha de inicio",
   "operatingDoctor": "Médico cirujano",
   "otherRelationships": "Otras relaciones",
   "otherSubstanceAbuse": "Abuso de otras sustancias",
+  "outcomes": "Resultados",
   "overdue": "Atrasado",
   "oxygenSaturation": "Saturación de oxígeno",
   "oxygenSupport": "Soporte respiratorio con oxígeno",
@@ -294,7 +329,9 @@
   "partoPrematuro": "Partos prematuros",
   "past": "Pasado",
   "patient": "Paciente",
+  "patientAndCulturalInfo": "Información del Paciente y Contexto Cultural",
   "patientFamilyTable": "Tabla de contactos familiares",
+  "patientInfo": "Información del Paciente",
   "pending": "Pendiente",
   "perinatalRecord": "Registro Perinatal",
   "pesoCorporal": "Peso corporal (kg)",
@@ -309,6 +346,8 @@
   "postnatalControls": "Control del Puerperio",
   "postOperativeComplications": "Complicaciones postoperatorias",
   "postOperativeDiagnosis": "Diagnóstico postoperatorio",
+  "pregnancies": "Embarazos",
+  "prematureBirths": "Prematuros",
   "prenatalAntecedents": "Antecedentes prenatales",
   "prenatalCare": "Control Prenatal",
   "prenatalCareChart": "Control Prenatal",
@@ -319,11 +358,14 @@
   "prev": "Previamente",
   "previousMonth": "Mes anterior",
   "primaryDiagnosis": "Diagnóstico primario",
+  "primaryLanguage": "Idioma Primario",
   "priorityOfAdmission": "Prioridad de admisión",
   "proximaCita": "Próxima Cita",
   "puerperioInmediato": "Puerperio Inmediato",
+  "quechua": "Quechua",
   "reactionDescription": "Descripción de la reacción",
   "reactionPlaceholder": "Describa los síntomas observados...",
+  "recommendation": "Recomendación",
   "recommendedProcedure": "Procedimiento recomendado",
   "recordLabourDetails": "Registrar detalles del trabajo de parto",
   "referrals": "Referencias",
@@ -336,9 +378,15 @@
   "required": "Requerido",
   "respiratoryRate": "Tasa respiratoria (RPM)",
   "responses": "Respuestas",
+  "resultsPreview": "Vista previa de resultados (Ajustados culturalmente)",
   "resumenPartoPuerperio": "Resumen de Parto y Puerperio",
+  "retraso": "Retraso",
+  "riesgo": "En riesgo",
+  "rural": "Rural/Andino",
   "save": "Guardar",
+  "saveAndClose": "Guardar y Cerrar",
   "savedRelationship": "Relación guardada con éxito",
+  "saving": "Guardando...",
   "scheduled": "Programado",
   "searchConditions": "Condiciones de búsqueda",
   "searching": "Buscando...",
@@ -358,13 +406,16 @@
   "smoking": "Fuma",
   "smokingDuration": "Duración del tabaquismo",
   "socialHistory": "Historia social",
+  "spanish": "Español",
   "spinalColumn": "Columna vertebral",
   "spinalColumnOther": "Otras observaciones sobre columna vertebral",
   "status": "Estado",
   "statusAtDischarge": "Estado al alta",
+  "stillBirths": "Nacidos muertos",
   "successfullyDeleted": "Eliminado con éxito",
   "suction": "Succión",
   "summaryOfLaborAndPostpartum": "Resumen del Parto y Puerperio",
+  "superior": "Superior",
   "surgicalHistory": "Historia quirúrgica",
   "surgicalSummary": "Resumen quirúrgico",
   "sutures": "Suturas",
@@ -374,17 +425,29 @@
   "Talla": "Talla (cm)",
   "tbScreening": "Resultado de detección de TB",
   "temperature": "Temperatura (°C)",
+  "tepsiDataAvailable": "The evaluation is now available in the patient record",
+  "tepsiSaved": "TEPSI Evaluation Saved",
+  "tepsiSaveError": "There was an error saving the TEPSI evaluation",
+  "tepsiSubtitle": "Evaluación del desarrollo psicomotor en niños de 2 a 5 años",
+  "tepsiTitle": "Test de Desarrollo Psicomotor (TEPSI)",
+  "termBirths": "A término",
   "terminationDate": "Fecha de terminación",
   "testApproach": "Enfoque de prueba",
   "testDate": "Fecha de prueba",
   "testEntryPoint": "Punto de entrada a la prueba",
   "testingRecommended": "Pruebas recomendadas",
+  "testPeruanoDataAvailable": "La evaluación está disponible en el registro del paciente",
+  "testPeruanoSaved": "Test Peruano de Desarrollo Guardado",
+  "testPeruanoSaveError": "Hubo un error al guardar el Test Peruano",
+  "testPeruanoSubtitle": "Evaluación del desarrollo infantil adaptada al contexto cultural peruano",
+  "testPeruanoTitle": "Test Peruano de Desarrollo Infantil",
   "testStrategy": "Estrategia de prueba",
   "therapiesPrescribed": "Terapias prescritas",
   "thorax": "Tórax",
   "time": "Tiempo",
   "timeRecorded": "Hora registrada",
   "today": "Hoy",
+  "total": "Resultado General",
   "tracingNumber": "N.º de rastreo",
   "tracingType": "Tipo de rastreo",
   "type": "Tipo",
@@ -396,6 +459,8 @@
   "update": "Actualizar",
   "updateError": "Error de actualización",
   "updateVaccinations": "Actualizar vacunaciones",
+  "urban": "Urbano",
+  "urbanMarginal": "Urbano Marginal",
   "uterineHeight": "Altura uterina (cm)",
   "vaccinationSchedule": "Calendario de vacunación",
   "vaccinationScheduleBuilder": "Gestor del calendario de vacunación",
